test: address review feedback on resource leaks, boxed primitives, and unused locals
- TestResources.getSimpleZipFile: wrap the FileInputStream and
  FileOutputStream in try-with-resources so both streams close even if
  IOUtils.copy throws.
- RecurringPatternMapperTest: replace 'new Integer(1)' / 'new Integer(2)'
  with Integer.valueOf(...) on the four assertions flagged by the bot.
- AgeCalculation.BirthdateData: mark the nested class static; it never
  uses the enclosing AgeCalculation instance.
- DailyRecurringAppointmentsGenerationServiceTest.shouldThrowException-
  WhenFrequencyIsDecreasedAndFutureRecurringAppointmentHaveMissedStatus:
  drop the unused 'expectedAppointmentDatesList' local.
- BaseAuthenticationTest.createAppDataDir: check the return values of
  File.delete() and File.mkdir() and throw a RuntimeException with a
  clear message instead of silently ignoring them.

Co-authored-by: Codesmith <codesmith-bot@users.noreply.github.com>